// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`u-tabs.vue Demo-capsule 1`] = `
<div>
  <div appear="capsule" class="root" item-width="auto" size="normal">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                模板
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                样式
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                逻辑
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">模板内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">样式内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">逻辑内容
      </div>
    </div>
  </div>
  <div appear="capsule" class="root" item-width="auto" size="small">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                模板
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                样式
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                逻辑
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">模板内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">样式内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">逻辑内容
      </div>
    </div>
  </div>
  <div appear="capsule" class="root" item-width="auto" size="mini">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                模板
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                样式
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                逻辑
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">模板内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">样式内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">逻辑内容
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tabs.vue Demo-line 1`] = `
<div>
  <div appear="line" class="root" item-width="auto" size="normal">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                模板
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                样式
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                逻辑
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">模板内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">样式内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">逻辑内容
      </div>
    </div>
  </div>
  <div appear="line" class="root" item-width="auto" size="small">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                模板
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                样式
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                逻辑
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">模板内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">样式内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">逻辑内容
      </div>
    </div>
  </div>
  <div appear="line" class="root" item-width="auto" size="mini">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                模板
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                样式
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                逻辑
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">模板内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">样式内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">逻辑内容
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tabs.vue Demo-round 1`] = `
<div>
  <div appear="round" class="root" item-width="auto" size="normal">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                模板
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                样式
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                逻辑
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">模板内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">样式内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">逻辑内容
      </div>
    </div>
  </div>
  <div appear="round" class="root" item-width="auto" size="small">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                模板
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                样式
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                逻辑
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">模板内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">样式内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">逻辑内容
      </div>
    </div>
  </div>
  <div appear="round" class="root" item-width="auto" size="mini">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                模板
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                样式
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                逻辑
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">模板内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">样式内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">逻辑内容
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tabs.vue Demo-square 1`] = `
<div>
  <div appear="square" class="root" item-width="auto" size="normal">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                模板
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                样式
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                逻辑
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">模板内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">样式内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">逻辑内容
      </div>
    </div>
  </div>
  <div appear="square" class="root" item-width="auto" size="small">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                模板
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                样式
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                逻辑
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">模板内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">样式内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">逻辑内容
      </div>
    </div>
  </div>
  <div appear="square" class="root" item-width="auto" size="mini">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                模板
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                样式
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                逻辑
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">模板内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">样式内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">逻辑内容
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tabs.vue Demo-text 1`] = `
<div>
  <div appear="text" class="root" item-width="auto" size="normal">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                模板
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                样式
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                逻辑
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">模板内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">样式内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">逻辑内容
      </div>
    </div>
  </div>
  <div appear="text" class="root" item-width="auto" size="small">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                模板
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                样式
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                逻辑
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">模板内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">样式内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">逻辑内容
      </div>
    </div>
  </div>
  <div appear="text" class="root" item-width="auto" size="mini">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                模板
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                样式
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                逻辑
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">模板内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">样式内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">逻辑内容
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tabs.vue Demo-使用 value 控制 1`] = `
<div>
  <div appear="square" class="root" item-width="auto" size="normal">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                模板
              </span>
            </a>
            <a alignment="center" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                样式
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                逻辑
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">模板内容
      </div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">样式内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">逻辑内容
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tabs.vue Demo-使用tdestination 1`] = `
<div>
  <div appear="square" class="root" item-width="auto" size="normal">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" href="/components/u-button" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                Button
              </span>
            </a>
            <a alignment="center" href="/components/u-input" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                Input
              </span>
            </a>
            <a alignment="center" href="/components/u-tabs" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                Tabs
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">
      </div>
      <div class="root" vusion-disabled-selected="true" vusion-slot-name="default">
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tabs.vue Demo-使用to 1`] = `
<div>
  <div appear="square" class="root" item-width="auto" size="normal">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" href="#/components/u-button" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                Button
              </span>
            </a>
            <a alignment="center" href="#/components/u-input" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                Input
              </span>
            </a>
            <a alignment="center" href="#/components/u-tabs" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                Tabs
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">
      </div>
      <div class="root" vusion-disabled-selected="true" vusion-slot-name="default">
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tabs.vue Demo-动态数据渲染 1`] = `
<div>
  <div appear="square" class="root" item-width="auto" size="normal">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div></div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
    </div>
  </div>
  <div appear="square" class="root" item-width="auto" size="normal">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" class selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">标签页 1title <span></span>
              </span>
            </a>
            <a alignment="center" class target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">标签页 2title </span>
            </a>
            <a alignment="center" class target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">标签页 3title <span></span>
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div style vusion-slot-name="content">标签页 1content
      </div>
      <div style="display: none;" vusion-slot-name="content">标签页 2content
      </div>
      <div style="display: none;" vusion-slot-name="content">标签页 3content
      </div>
    </div>
  </div>
  <a class="root" hovertype="underline" size="small" slot="extra" tabindex="0" target="_self" vusion-slot-name-edit="text">
    value+1
  </a>
  <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
    click reload
  </a>
</div>
`;

exports[`u-tabs.vue Demo-动态数据渲染 2`] = `
<div>
  <div appear="square" class="root" item-width="auto" size="normal">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" class selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">标签页 1 <span></span>
              </span>
            </a>
            <a alignment="center" class target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">标签页 2 </span>
            </a>
            <a alignment="center" class target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">标签页 3 <span></span>
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div style vusion-slot-name="content">
      </div>
      <div style="display: none;" vusion-slot-name="content">
      </div>
      <div style="display: none;" vusion-slot-name="content">
      </div>
    </div>
  </div>
  <a class="root" hovertype="underline" size="small" slot="extra" tabindex="0" target="_self" vusion-slot-name-edit="text">
    value+1
  </a>
</div>
`;

exports[`u-tabs.vue Demo-动态数据源 1`] = `
<div>
  <div appear="square" class="root" item-width="auto" size="normal">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" class selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title"> </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div style vusion-slot-name="content">
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tabs.vue Demo-可关闭 1`] = `
<div>
  <div appear="square" class="root" item-width="90px" size="normal">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="left" selected="selected" style="width: 90px;" target="_self" width-fixed="true">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                模板
                <span></span>
              </span>
            </a>
            <a alignment="left" style="width: 90px;" target="_self" width-fixed="true">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                样式
                <span></span>
              </span>
            </a>
            <a alignment="left" style="width: 90px;" target="_self" width-fixed="true">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                逻辑
                <span></span>
              </span>
            </a>
            <a alignment="left" style="width: 90px;" target="_self" width-fixed="true">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                文档
                <span></span>
              </span>
            </a>
            <a alignment="left" style="width: 90px;" target="_self" width-fixed="true">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                资源
                <span></span>
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">模板内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">样式内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">逻辑内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">文档内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">资源内容
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tabs.vue Demo-圆形卡片（默认） 1`] = `
<div>
  <div appear="round" class="root" item-width="auto" size="small">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                模板
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                样式
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                逻辑
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">模板内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">样式内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">逻辑内容
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tabs.vue Demo-基本用法 1`] = `
<div>
  <div appear="square" class="root" item-width="auto" size="normal">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                <span class="root" vusion-slot-name-edit="text">选项卡A</span>
              </span>
            </a>
            <a alignment="center" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                <span class="root" vusion-slot-name-edit="text">选项卡B</span>
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                <span class="root" vusion-slot-name-edit="text">选项卡C</span>
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">选项卡 A 的内容
      </div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">选项卡 B 的内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">选项卡 C 的内容
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tabs.vue Demo-外观-圆形卡片（默认） 1`] = `
<div>
  <div appear="round" class="root" item-width="auto" size="small">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                <span class="root" vusion-slot-name-edit="text">选项卡A</span>
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                <span class="root" vusion-slot-name-edit="text">选项卡B</span>
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                <span class="root" vusion-slot-name-edit="text">选项卡C</span>
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">选项卡 A 的内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">选项卡 B 的内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">选项卡 C 的内容
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tabs.vue Demo-外观-文本形态 1`] = `
<div>
  <div appear="text" class="root" item-width="auto" size="mini">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                <span class="root" vusion-slot-name-edit="text">选项卡A</span>
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                <span class="root" vusion-slot-name-edit="text">选项卡B</span>
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                <span class="root" vusion-slot-name-edit="text">选项卡C</span>
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">选项卡 A 的内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">选项卡 B 的内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">选项卡 C 的内容
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tabs.vue Demo-外观-方形卡片（默认） 1`] = `
<div>
  <div appear="square" class="root" item-width="auto" size="normal">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                <span class="root" vusion-slot-name-edit="text">选项卡A</span>
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                <span class="root" vusion-slot-name-edit="text">选项卡B</span>
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                <span class="root" vusion-slot-name-edit="text">选项卡C</span>
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">选项卡 A 的内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">选项卡 B 的内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">选项卡 C 的内容
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tabs.vue Demo-外观-线条导航 1`] = `
<div>
  <div appear="line" class="root" item-width="auto" size="normal">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                <span class="root" vusion-slot-name-edit="text">选项卡A</span>
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                <span class="root" vusion-slot-name-edit="text">选项卡B</span>
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                <span class="root" vusion-slot-name-edit="text">选项卡C</span>
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">选项卡 A 的内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">选项卡 B 的内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">选项卡 C 的内容
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tabs.vue Demo-外观-胶囊导航 1`] = `
<div>
  <div appear="capsule" class="root" item-width="auto" size="normal">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                <span class="root" vusion-slot-name-edit="text">选项卡A</span>
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                <span class="root" vusion-slot-name-edit="text">选项卡B</span>
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                <span class="root" vusion-slot-name-edit="text">选项卡C</span>
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">选项卡 A 的内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">选项卡 B 的内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">选项卡 C 的内容
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tabs.vue Demo-插槽扩展 1`] = `
<div>
  <div appear="square" class="root" item-width="auto" size="normal">
    <div>
      <span vusion-slot-name="extra">
        <label class="root" tabindex="0">
          <span class="box" status="false"></span> 全选 <span vusion-slot-name="item"> </span>
        </label>
      </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                <span>模板 <span class="root" type="filled">
                    <span vusion-slot-name-edit="text">1</span>
                  </span>
                </span>
              </span>
            </a>
            <a alignment="center" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                <span>样式 <span class="root" type="filled">
                    <span vusion-slot-name-edit="text">6</span>
                  </span>
                </span>
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                <span>逻辑 <span class="root" type="filled">
                    <span vusion-slot-name-edit="text">3</span>
                  </span>
                </span>
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">
        模板内容
      </div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">
        样式内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">
        逻辑内容
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tabs.vue Demo-文本形态 1`] = `
<div>
  <div appear="text" class="root" item-width="auto" size="mini">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                模板
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                样式
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                逻辑
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">模板内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">样式内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">逻辑内容
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tabs.vue Demo-方形卡片（默认） 1`] = `
<div>
  <div appear="square" class="root" item-width="auto" size="normal">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                模板
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                样式
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                逻辑
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">模板内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">样式内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">逻辑内容
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tabs.vue Demo-标签页较多的情形 1`] = `
<div appear="square" class="root" item-width="auto" size="normal">
  <div>
    <span vusion-slot-name="extra">
      <a class="root" hovertype="underline" size="small" tabindex="0" target="_self" vusion-slot-name-edit="text"> 添加 </a>
    </span>
    <nav>
      <span></span>
      <div>
        <div>
          <a alignment="center" target="_self">
            <span vusion-slot-name="title" vusion-slot-name-edit="title">
              标签页 1
            </span>
          </a>
          <a alignment="center" target="_self">
            <span vusion-slot-name="title" vusion-slot-name-edit="title">
              标签页 2
            </span>
          </a>
          <a alignment="center" target="_self">
            <span vusion-slot-name="title" vusion-slot-name-edit="title">
              标签页 3
            </span>
          </a>
          <a alignment="center" target="_self">
            <span vusion-slot-name="title" vusion-slot-name-edit="title">
              标签页 4
            </span>
          </a>
          <a alignment="center" target="_self">
            <span vusion-slot-name="title" vusion-slot-name-edit="title">
              标签页 5
            </span>
          </a>
          <a alignment="center" target="_self">
            <span vusion-slot-name="title" vusion-slot-name-edit="title">
              标签页 6
            </span>
          </a>
          <a alignment="center" selected="selected" target="_self">
            <span vusion-slot-name="title" vusion-slot-name-edit="title">
              标签页 7
            </span>
          </a>
          <a alignment="center" target="_self">
            <span vusion-slot-name="title" vusion-slot-name-edit="title">
              标签页 8
            </span>
          </a>
          <a alignment="center" target="_self">
            <span vusion-slot-name="title" vusion-slot-name-edit="title">
              标签页 9
            </span>
          </a>
          <a alignment="center" target="_self">
            <span vusion-slot-name="title" vusion-slot-name-edit="title">
              标签页 10
            </span>
          </a>
          <a alignment="center" target="_self">
            <span vusion-slot-name="title" vusion-slot-name-edit="title">
              标签页 11
            </span>
          </a>
          <a alignment="center" target="_self">
            <span vusion-slot-name="title" vusion-slot-name-edit="title">
              标签页 12
            </span>
          </a>
          <a alignment="center" target="_self">
            <span vusion-slot-name="title" vusion-slot-name-edit="title">
              标签页 13
            </span>
          </a>
          <a alignment="center" target="_self">
            <span vusion-slot-name="title" vusion-slot-name-edit="title">
              标签页 14
            </span>
          </a>
          <a alignment="center" target="_self">
            <span vusion-slot-name="title" vusion-slot-name-edit="title">
              标签页 15
            </span>
          </a>
          <a alignment="center" target="_self">
            <span vusion-slot-name="title" vusion-slot-name-edit="title">
              标签页 16
            </span>
          </a>
          <a alignment="center" target="_self">
            <span vusion-slot-name="title" vusion-slot-name-edit="title">
              标签页 17
            </span>
          </a>
          <a alignment="center" target="_self">
            <span vusion-slot-name="title" vusion-slot-name-edit="title">
              标签页 18
            </span>
          </a>
          <a alignment="center" target="_self">
            <span vusion-slot-name="title" vusion-slot-name-edit="title">
              标签页 19
            </span>
          </a>
          <a alignment="center" target="_self">
            <span vusion-slot-name="title" vusion-slot-name-edit="title">
              标签页 20
            </span>
          </a>
        </div>
      </div>
      <span></span>
    </nav>
  </div>
  <div>
    <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">标签页 1 的内容
    </div>
    <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">标签页 2 的内容
    </div>
    <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">标签页 3 的内容
    </div>
    <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">标签页 4 的内容
    </div>
    <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">标签页 5 的内容
    </div>
    <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">标签页 6 的内容
    </div>
    <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">标签页 7 的内容
    </div>
    <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">标签页 8 的内容
    </div>
    <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">标签页 9 的内容
    </div>
    <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">标签页 10 的内容
    </div>
    <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">标签页 11 的内容
    </div>
    <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">标签页 12 的内容
    </div>
    <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">标签页 13 的内容
    </div>
    <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">标签页 14 的内容
    </div>
    <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">标签页 15 的内容
    </div>
    <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">标签页 16 的内容
    </div>
    <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">标签页 17 的内容
    </div>
    <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">标签页 18 的内容
    </div>
    <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">标签页 19 的内容
    </div>
    <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">标签页 20 的内容
    </div>
  </div>
</div>
`;

exports[`u-tabs.vue Demo-添加 1`] = `
<div>
  <div appear="square" class="root" item-width="auto" size="normal">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                AAA
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                BBB
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                CCC
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">
      </div>
    </div>
  </div>
  <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
    添加
  </a>
</div>
`;

exports[`u-tabs.vue Demo-禁用状态 1`] = `
<div>
  <div appear="square" class="root" disabled="disabled" item-width="auto" size="normal">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" disabled="disabled" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                模板
              </span>
            </a>
            <a alignment="center" disabled="disabled" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                样式
              </span>
            </a>
            <a alignment="center" disabled="disabled" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                逻辑
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">模板内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">样式内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">逻辑内容
      </div>
    </div>
  </div>
  <div appear="square" class="root" item-width="auto" size="normal">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                模板
              </span>
            </a>
            <a alignment="center" disabled="disabled" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                样式
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                逻辑
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">模板内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">样式内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">逻辑内容
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tabs.vue Demo-竖线分割 1`] = `
<div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <div appear="split" class="root" item-width="auto" size="normal">
      <div>
        <span vusion-slot-name="extra"> </span>
        <nav>
          <span></span>
          <div>
            <div>
              <a alignment="center" selected="selected" target="_self">
                <span vusion-slot-name="title" vusion-slot-name-edit="title">
                  模板
                </span>
              </a>
              <a alignment="center" target="_self">
                <span vusion-slot-name="title" vusion-slot-name-edit="title">
                  样式
                </span>
              </a>
              <a alignment="center" target="_self">
                <span vusion-slot-name="title" vusion-slot-name-edit="title">
                  逻辑
                </span>
              </a>
            </div>
          </div>
          <span></span>
        </nav>
      </div>
      <div>
        <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">模板内容
        </div>
        <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">样式内容
        </div>
        <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">逻辑内容
        </div>
      </div>
    </div>
    <div appear="split" class="root" item-width="auto" size="mini">
      <div>
        <span vusion-slot-name="extra"> </span>
        <nav>
          <span></span>
          <div>
            <div>
              <a alignment="center" selected="selected" target="_self">
                <span vusion-slot-name="title" vusion-slot-name-edit="title">
                  模板
                  <span></span>
                </span>
              </a>
              <a alignment="center" target="_self">
                <span vusion-slot-name="title" vusion-slot-name-edit="title">
                  样式
                  <span></span>
                </span>
              </a>
              <a alignment="center" target="_self">
                <span vusion-slot-name="title" vusion-slot-name-edit="title">
                  逻辑
                  <span></span>
                </span>
              </a>
            </div>
          </div>
          <span></span>
        </nav>
      </div>
      <div>
        <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">模板内容
        </div>
        <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">样式内容
        </div>
        <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">逻辑内容
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tabs.vue Demo-线条导航 1`] = `
<div>
  <div appear="line" class="root" item-width="auto" size="normal">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                模板
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                样式
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                逻辑
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">模板内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">样式内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">逻辑内容
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tabs.vue Demo-胶囊导航 1`] = `
<div>
  <div appear="capsule" class="root" item-width="auto" size="normal">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                模板
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                样式
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                逻辑
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">模板内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">样式内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">逻辑内容
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tabs.vue Demo-路由 1`] = `
<div>
  <div appear="square" class="root" item-width="auto" size="normal">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" href="#/components/u-button" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                Button
              </span>
            </a>
            <a alignment="center" href="#/components/u-input" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                Input
              </span>
            </a>
            <a alignment="center" href="#/components/u-tabs" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                Tabs
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">
      </div>
      <div class="root" vusion-disabled-selected="true" vusion-slot-name="default">
      </div>
    </div>
  </div>
</div>
`;

exports[`u-tabs.vue Demo-随机添加测试 1`] = `
<div appear="square" class="root" item-width="auto" size="normal">
  <div>
    <span vusion-slot-name="extra"> </span>
    <nav>
      <span></span>
      <div>
        <div>
          <a alignment="center" selected="selected" target="_self">
            <span vusion-slot-name="title" vusion-slot-name-edit="title">
              Tab1
            </span>
          </a>
          <a alignment="center" target="_self">
            <span vusion-slot-name="title" vusion-slot-name-edit="title">
              Tab2
            </span>
          </a>
          <a alignment="center" target="_self">
            <span vusion-slot-name="title" vusion-slot-name-edit="title">
              Tab3
            </span>
          </a>
          <a alignment="center" target="_self">
            <span vusion-slot-name="title" vusion-slot-name-edit="title">
              Tab4
            </span>
          </a>
          <a alignment="center" target="_self">
            <span vusion-slot-name="title" vusion-slot-name-edit="title">
              Tab5
            </span>
          </a>
          <a alignment="center" target="_self">
            <span vusion-slot-name="title" vusion-slot-name-edit="title">
              Tab6
            </span>
          </a>
          <a alignment="center" target="_self">
            <span vusion-slot-name="title" vusion-slot-name-edit="title">
              Tab7
            </span>
          </a>
          <a alignment="center" target="_self">
            <span vusion-slot-name="title" vusion-slot-name-edit="title">
              Tab8
            </span>
          </a>
          <a alignment="center" target="_self">
            <span vusion-slot-name="title" vusion-slot-name-edit="title">
              Tab9
            </span>
          </a>
          <a alignment="center" target="_self">
            <span vusion-slot-name="title" vusion-slot-name-edit="title">
              Tab10
            </span>
          </a>
        </div>
      </div>
      <span></span>
    </nav>
  </div>
  <div>
    <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">模板内容
    </div>
    <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">样式内容
    </div>
    <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">逻辑内容
    </div>
    <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">模板内容
    </div>
    <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">样式内容
    </div>
    <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">逻辑内容
    </div>
    <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">模板内容
    </div>
    <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">样式内容
    </div>
    <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">逻辑内容
    </div>
    <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">逻辑内容
    </div>
  </div>
</div>
`;

exports[`u-tabs.vue Demo-默认显示和可关闭 1`] = `
<div>
  <div appear="square" class="root" item-width="auto" size="normal">
    <div>
      <span vusion-slot-name="extra"> </span>
      <nav>
        <span></span>
        <div>
          <div>
            <a alignment="center" selected="selected" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                模板
                <span></span>
              </span>
            </a>
            <a alignment="center" style="display: none;" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                样式
              </span>
            </a>
            <a alignment="center" target="_self">
              <span vusion-slot-name="title" vusion-slot-name-edit="title">
                逻辑
              </span>
            </a>
          </div>
        </div>
        <span></span>
      </nav>
    </div>
    <div>
      <div class="root" style vusion-disabled-selected="true" vusion-slot-name="default">模板内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">样式内容
      </div>
      <div class="root" style="display: none;" vusion-disabled-selected="true" vusion-slot-name="default">逻辑内容
      </div>
    </div>
  </div>
</div>
`;
